Added portfolio specific templates

--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 /*
 Theme Name: kseninja
-Theme URI: http://underscores.me/
-Author: Underscores.me
-Author URI: http://underscores.me/
-Description: Description
+Theme URI: http://kse.ninja/
+Author: Ksenija Gogic, using the Underscores theme!
+Author URI: http://kse.ninja/
+Description: This my theme for my personal portfolio site ;)
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: kseninja
-Tags:
+Tags: portfolio, work
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
