--- a/style.css
+++ b/style.css
@@ -9,30 +9,242 @@ License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: kseninja
 Tags: portfolio, work
-
-This theme, like WordPress, is licensed under the GPL.
-Use it to make something cool, have fun, and share what you've learned with others.
-
-kseninja is based on Underscores http://underscores.me/, (C) 2012-2015 Automattic, Inc.
-Underscores is distributed under the terms of the GNU GPL v2 or later.
-
-Normalizing styles have been helped along thanks to the fine work of
-Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 */
+article, aside, details, figcaption, figure, footer, header, hgroup, nav, section, summary {
+  display: block; }
+
+audio, canvas, video {
+  display: inline-block; }
+
+audio:not([controls]) {
+  display: none;
+  height: 0; }
+
+[hidden] {
+  display: none; }
+
+html {
+  font-family: sans-serif;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%; }
+
+a:focus {
+  outline: thin dotted; }
+
+a:active, a:hover {
+  outline: 0; }
+
+h1 {
+  font-size: 2em; }
+
+abbr[title] {
+  border-bottom: 1px dotted; }
+
+b, strong {
+  font-weight: 700; }
+
+dfn {
+  font-style: italic; }
+
+mark {
+  background: #ff0;
+  color: #000; }
+
+code, kbd, pre, samp {
+  font-family: monospace, serif;
+  font-size: 1em; }
+
+pre {
+  white-space: pre-wrap;
+  word-wrap: break-word; }
+
+q {
+  quotes: \201C \201D \2018 \2019; }
+
+small {
+  font-size: 80%; }
+
+sub, sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline; }
+
+sup {
+  top: -.5em; }
+
+sub {
+  bottom: -.25em; }
+
+img {
+  border: 0; }
+
+svg:not(:root) {
+  overflow: hidden; }
+
+fieldset {
+  border: 1px solid silver;
+  margin: 0 2px;
+  padding: 0.35em 0.625em 0.75em; }
+
+button, input, select, textarea {
+  font-family: inherit;
+  font-size: 100%;
+  margin: 0; }
+
+button, input {
+  line-height: normal; }
+
+button, html input[type=button], input[type=reset], input[type=submit] {
+  -webkit-appearance: button;
+  cursor: pointer; }
+
+button[disabled], input[disabled] {
+  cursor: default; }
+
+input[type=checkbox], input[type=radio] {
+  box-sizing: border-box;
+  padding: 0; }
+
+input[type=search] {
+  -webkit-appearance: textfield;
+  -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+  box-sizing: content-box; }
+
+input[type=search]::-webkit-search-cancel-button, input[type=search]::-webkit-search-decoration {
+  -webkit-appearance: none; }
+
+textarea {
+  overflow: auto;
+  vertical-align: top; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+body, figure {
+  margin: 0; }
+
+legend, button::-moz-focus-inner, input::-moz-focus-inner {
+  border: 0;
+  padding: 0; }
+
+* {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
+
+.clearfix:after {
+  content: " ";
+  visibility: hidden;
+  display: block;
+  height: 0;
+  clear: both; }
+
+body {
+  font-family: 'Lekton', monospace; }
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Amatic SC', sans-serif;
+  text-transform: uppercase; }
+
+h1 {
+  font-size: 89px; }
+
+h2 {
+  font-size: 67px; }
+
+h3 {
+  font-size: 50px; }
+
+div.intro {
+  display: flex;
+  flex-direction: column;
+  padding: 20px; }
+
+img.header {
+  width: 75%;
+  margin: 0 auto; }
+
+.nav {
+  list-style-type: none;
+  font-size: 28px;
+  padding-left: 0;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  text-align: center; }
+  .nav li {
+    margin: 10px; }
+    .nav li a {
+      padding: 5px;
+      text-decoration: none;
+      color: RGB(238, 241, 242); }
+      .nav li a:hover {
+        background: RGB(172, 29, 25); }
+
+.sidebarNav {
+  list-style-type: none; }
+  .sidebarNav li {
+    display: block; }
+
 .wp-post-image {
-  max-width: 200px; }
+  max-width: 500px; }
+
+.sidebar {
+  background: RGB(224, 79, 72);
+  height: 100vh;
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  -webkit-transition: all 0.5s ease-in-out;
+  -moz-transition: all 0.5s ease-in-out;
+  padding: 40px;
+  display: flex;
+  flex-direction: column; }
+  .sidebar aside {
+    margin: auto; }
+  .sidebar h1, .sidebar h3 {
+    text-align: center;
+    color: white;
+    margin: 10px;
+    line-height: 1; }
+
+.sidebarFull {
+  width: 50%; }
+
+.first, .second {
+  transition: all 0.5s; }
+
+.sidebarShrink {
+  width: 25%; }
+  .sidebarShrink h1 {
+    font-size: 67px; }
+  .sidebarShrink h2 {
+    font-size: 50px; }
+
+.sidebar .hide {
+  display: none; }
+
+.sidebarShrink .first {
+  display: none; }
+
+.sidebarFull .second {
+  display: none; }
 
 .idiot {
   overflow: hidden; }
 
 .content {
   width: 50%;
-  /*position: absolute;*/
   float: right;
-  margin: 0;
+  margin-top: -20px;
   padding: 0;
-  -webkit-transition: all 1s ease-in-out;
-  -moz-transition: all 1s ease-in-out;
+  -webkit-transition: all 0.5s ease-in-out;
+  -moz-transition: all 0.5s ease-in-out;
   background: url(assets/websiteBkgGridsmall.png); }
 
 .contentFull {
@@ -43,23 +255,6 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
   /*width: 100%;*/
   height: 100vh;
   /*background: url(websiteBkgGridsmall.png);*/ }
-
-.turnRed {
-  background: RGB(224, 79, 72);
-  width: 50%;
-  height: 100vh;
-  position: fixed;
-  z-index: 999;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  -webkit-transition: all 1s ease-in-out;
-  -moz-transition: all 1s ease-in-out;
-  padding: 10px;
-  /*margin: 0;*/ }
-
-.sidebarShrink {
-  width: 25%; }
 
 body {
   margin: 0;
