--- a/styles/_content.scss
+++ b/styles/_content.scss
@@ -3,12 +3,11 @@
 }
 .content {
 	width: 50%;
-	/*position: absolute;*/
 	float: right;
-	margin: 0;
+	margin-top: -20px;
 	padding: 0;
-	-webkit-transition: all 1s ease-in-out;
-	-moz-transition: all 1s ease-in-out;
+	-webkit-transition: all 0.5s ease-in-out;
+	-moz-transition: all 0.5s ease-in-out;
 	background: url(assets/websiteBkgGridsmall.png);
 	// overflow: hidden;
 }
