--- a/styles/style.scss
+++ b/styles/style.scss
@@ -9,25 +9,23 @@ License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: kseninja
 Tags: portfolio, work
-
-This theme, like WordPress, is licensed under the GPL.
-Use it to make something cool, have fun, and share what you've learned with others.
-
-kseninja is based on Underscores http://underscores.me/, (C) 2012-2015 Automattic, Inc.
-Underscores is distributed under the terms of the GNU GPL v2 or later.
-
-Normalizing styles have been helped along thanks to the fine work of
-Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 */
 
 $red: RGB(224, 79, 72);
+$darkRed: RGB(172, 29, 25);
+$white: RGB(238, 241, 242);
 
+@import 'setup';
+@import 'typography';
+
+@import 'header';
+@import 'navs';
 @import 'images';
-@import 'content';
 @import 'sidebar';
+@import 'content';
+
 
 body {
 	margin: 0;
 	padding: 0;
-	// background: red;
 }
