--- a/style.css
+++ b/style.css
@@ -176,18 +176,64 @@ img.header {
   flex-wrap: wrap;
   text-align: center; }
   .nav li {
-    margin: 10px; }
+    margin-bottom: 50px; }
     .nav li a {
-      padding: 5px;
+      padding: 10px;
+      padding-bottom: 5px;
       text-decoration: none;
-      color: RGB(238, 241, 242); }
-      .nav li a:hover {
-        background: RGB(172, 29, 25); }
+      color: RGB(238, 241, 242);
+      border-bottom: 2px solid RGB(172, 29, 25);
+      position: relative;
+      z-index: 99;
+      position: relative;
+      z-index: 1; }
+    .nav li a:after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 0px;
+      background: RGB(172, 29, 25);
+      z-index: -1;
+      transition: height 0.3s; }
+    .nav li a:hover:after {
+      height: 100%; }
 
 .sidebarNav {
   list-style-type: none; }
   .sidebarNav li {
     display: block; }
+
+ul.social {
+  padding-left: 0;
+  text-align: center; }
+  ul.social li {
+    display: inline; }
+    ul.social li a {
+      padding: 10px;
+      color: white;
+      border-bottom: 2px solid RGB(172, 29, 25);
+      position: relative;
+      z-index: 99;
+      position: relative;
+      z-index: 1; }
+    ul.social li a:after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 0px;
+      background: RGB(172, 29, 25);
+      z-index: -1;
+      transition: height 0.3s; }
+    ul.social li a:hover:after {
+      height: 100%; }
+
+.introNav ul {
+  color: black;
+  background: blue; }
 
 .wp-post-image {
   max-width: 500px; }
@@ -222,9 +268,9 @@ img.header {
 .sidebarShrink {
   width: 25%; }
   .sidebarShrink h1 {
-    font-size: 67px; }
-  .sidebarShrink h2 {
     font-size: 50px; }
+  .sidebarShrink h3 {
+    font-size: 28px; }
 
 .sidebar .hide {
   display: none; }
