--- a/styles/_navs.scss
+++ b/styles/_navs.scss
@@ -7,15 +7,28 @@
 	flex-wrap: wrap;
 	text-align: center;
 	li {
-		margin: 10px;
+		margin-bottom: 50px;
 		a{
-			padding: 5px;
+			padding: 10px;
+			padding-bottom: 5px;
 			text-decoration: none;
 			color: $white;
-			&:hover {
-				background: $darkRed;
-			}
+			border-bottom: 2px solid $darkRed;
+			position: relative;
+			z-index: 99;
+			position:relative; 
+			z-index:1; 
 		}
+		a:after {
+		    content: "";
+		    position:absolute;
+		    bottom:0; left:0;
+		    width:100%; height:0px;
+		    background: $darkRed;
+		    z-index:-1;
+		    transition: height 0.3s;
+		}
+		a:hover:after { height:100%; }
 	}
 }
 
@@ -26,3 +39,41 @@
 		display: block;
 	}
 }
+
+ul.social {
+	padding-left: 0;
+	text-align: center;
+	li {
+		display: inline;
+		// background: red;
+		a {
+			padding: 10px;
+			color: white;
+			border-bottom: 2px solid $darkRed;
+			position: relative;
+			z-index: 99;
+			position:relative; 
+			z-index:1; 
+		}
+		a:after {
+		    content: "";
+		    position:absolute;
+		    bottom:0; left:0;
+		    width:100%; height:0px;
+		    background: $darkRed;
+		    z-index:-1;
+		    transition: height 0.3s;
+		}
+		a:hover:after { 
+			height:100%; 
+			}
+	}
+}
+
+.introNav {
+	ul {
+		color: $black;
+		background: blue;
+	}
+}
+
