--- a/styles/style.scss
+++ b/styles/style.scss
@@ -14,6 +14,7 @@ Tags: portfolio, work
 $red: RGB(224, 79, 72);
 $darkRed: RGB(172, 29, 25);
 $white: RGB(238, 241, 242);
+$black: black;
 
 @import 'setup';
 @import 'typography';
