--- a/style.css
+++ b/style.css
@@ -158,25 +158,37 @@ h2 {
 h3 {
   font-size: 50px; }
 
+.projectTitle {
+  font-size: 28px; }
+
+.sectionTitle {
+  font-size: 37px; }
+
 div.intro {
   display: flex;
   flex-direction: column;
-  padding: 20px; }
+  padding: 40px;
+  justify-content: space-between; }
+  div.intro p {
+    width: 75%;
+    text-align: center;
+    margin: 0 auto; }
 
 img.header {
   width: 75%;
-  margin: 0 auto; }
+  margin: 0 auto;
+  -webkit-mix-blend-mode: multiply; }
 
 .nav {
   list-style-type: none;
-  font-size: 28px;
+  font-size: 24px;
   padding-left: 0;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   text-align: center; }
   .nav li {
-    margin-bottom: 50px; }
+    margin-bottom: 30px; }
     .nav li a {
       padding: 10px;
       padding-bottom: 5px;
@@ -203,7 +215,8 @@ img.header {
 .sidebarNav {
   list-style-type: none; }
   .sidebarNav li {
-    display: block; }
+    display: block;
+    color: RGB(238, 241, 242); }
 
 ul.social {
   padding-left: 0;
@@ -212,6 +225,7 @@ ul.social {
     display: inline; }
     ul.social li a {
       padding: 10px;
+      padding-bottom: 8px;
       color: white;
       border-bottom: 2px solid RGB(172, 29, 25);
       position: relative;
@@ -231,12 +245,16 @@ ul.social {
     ul.social li a:hover:after {
       height: 100%; }
 
-.introNav ul {
+ul.introNav li a, ul.socialIntro li a {
   color: black;
-  background: blue; }
+  border-bottom: 2px solid RGB(224, 79, 72);
+  transition: color 0.8s; }
 
-.wp-post-image {
-  max-width: 500px; }
+ul.introNav li a:after, ul.socialIntro li a:after {
+  background: RGB(224, 79, 72); }
+
+ul.introNav li a:hover, ul.socialIntro li a:hover {
+  color: RGB(238, 241, 242); }
 
 .sidebar {
   background: RGB(224, 79, 72);
@@ -255,7 +273,7 @@ ul.social {
     margin: auto; }
   .sidebar h1, .sidebar h3 {
     text-align: center;
-    color: white;
+    color: RGB(238, 241, 242);
     margin: 10px;
     line-height: 1; }
 
@@ -281,6 +299,22 @@ ul.social {
 .sidebarFull .second {
   display: none; }
 
+aside.second {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 0; }
+  aside.second img {
+    max-width: 50px;
+    margin: 0 auto;
+    display: block; }
+  aside.second .social {
+    margin-bottom: 0;
+    font-size: 12px; }
+  aside.second ul {
+    font-size: 24px; }
+
 .idiot {
   overflow: hidden; }
 
@@ -290,17 +324,56 @@ ul.social {
   margin-top: -20px;
   padding: 0;
   -webkit-transition: all 0.5s ease-in-out;
-  -moz-transition: all 0.5s ease-in-out;
-  background: url(assets/websiteBkgGridsmall.png); }
+  -moz-transition: all 0.5s ease-in-out; }
 
 .contentFull {
   width: 75%; }
+
+.intro {
+  background: url(assets/websiteBkgGridsmall.png) fixed; }
+
+.project {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+  background: url(assets/textured_paper_@2X.png); }
 
 .hunna {
   margin: 0;
   /*width: 100%;*/
   height: 100vh;
   /*background: url(websiteBkgGridsmall.png);*/ }
+
+section.project {
+  padding: 20px; }
+
+section.projectEach {
+  width: 400px;
+  text-align: center;
+  margin: 20px;
+  background: RGBA(255, 255, 255, 1);
+  transition: 1.5s all; }
+
+.projectGallery {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap; }
+  .projectGallery .wp-post-image {
+    max-width: 400px;
+    max-height: 300px; }
+  .projectGallery img {
+    -webkit-filter: grayscale(90%);
+    transition: 0.3s all; }
+    .projectGallery img:hover {
+      -webkit-filter: grayscale(2%); }
+
+.sectionTitle {
+  text-align: center;
+  color: RGB(224, 79, 72); }
+
+.projectTitle {
+  font-size: 24px; }
 
 body {
   margin: 0;
