--- a/styles/_content.scss
+++ b/styles/_content.scss
@@ -7,13 +7,31 @@
 	margin-top: -20px;
 	padding: 0;
 	-webkit-transition: all 0.5s ease-in-out;
-	-moz-transition: all 0.5s ease-in-out;
-	background: url(assets/websiteBkgGridsmall.png);
+	-moz-transition: all 0.5s ease-in-out; 
 	// overflow: hidden;
+
 }
 .contentFull{
 	width: 75%;
 }
+
+.intro {
+	background: url(assets/websiteBkgGridsmall.png) fixed;
+}
+
+
+.project {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin: 0 auto;
+	background: url(assets/textured_paper_@2X.png);
+	section {
+		// margin: 0 auto;
+	}
+
+}
+
 
 .hunna {
 	margin: 0;
