--- a/styles/_navs.scss
+++ b/styles/_navs.scss
@@ -1,13 +1,13 @@
 .nav {
 	list-style-type: none;
-	font-size: 28px;
+	font-size: 24px;
 	padding-left: 0;
 	display: flex;
 	flex-direction: column;
 	flex-wrap: wrap;
 	text-align: center;
 	li {
-		margin-bottom: 50px;
+		margin-bottom: 30px;
 		a{
 			padding: 10px;
 			padding-bottom: 5px;
@@ -22,8 +22,10 @@
 		a:after {
 		    content: "";
 		    position:absolute;
-		    bottom:0; left:0;
-		    width:100%; height:0px;
+		    bottom:0; 
+		    left:0;
+		    width:100%; 
+		    height:0px;
 		    background: $darkRed;
 		    z-index:-1;
 		    transition: height 0.3s;
@@ -34,9 +36,9 @@
 
 .sidebarNav {
 	list-style-type: none;
-
 	li {
 		display: block;
+		color: $white;
 	}
 }
 
@@ -48,6 +50,7 @@ ul.social {
 		// background: red;
 		a {
 			padding: 10px;
+			padding-bottom: 8px;
 			color: white;
 			border-bottom: 2px solid $darkRed;
 			position: relative;
@@ -70,10 +73,19 @@ ul.social {
 	}
 }
 
-.introNav {
-	ul {
-		color: $black;
-		background: blue;
+ul.introNav, ul.socialIntro {
+	li {
+		a {
+			color: $black;
+			border-bottom: 2px solid $red;
+			transition: color 0.8s;
+		}
+		a:after {
+			background: $red;
+		}
+		a:hover {
+			color: $white;
+		}
 	}
-}
 
+}
