--- a/styles/_sidebar.scss
+++ b/styles/_sidebar.scss
@@ -12,11 +12,11 @@
 	display: flex;
 	flex-direction: column;
 	aside {
-		margin: auto;
+		margin: auto; 
 	}
 	h1, h3 {
 		text-align: center;
-		color: white;
+		color: $white;
 		margin: 10px;
 		line-height: 1;
 	}
@@ -50,4 +50,24 @@
 
 .sidebarFull .second {
 	display: none;
+}
+
+aside.second {
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	margin: 0;
+	img {
+		max-width: 50px;
+		margin: 0 auto;
+		display: block;
+	}
+	.social {
+		margin-bottom: 0;
+		font-size: 12px;
+	}
+	ul {
+		font-size: 24px;
+	}
 }
