--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -3,6 +3,7 @@ div.intro {
 	flex-direction: column;
 	padding: 40px;
 	justify-content: space-between;
+	background: url(assets/websiteBkgGridsmall.png) fixed;
 	p {
 		width: 75%;
 		text-align: center;
