--- a/style.css
+++ b/style.css
@@ -178,8 +178,7 @@ div.intro {
   -webkit-box-align: center;
   -webkit-align-items: center;
       -ms-flex-align: center;
-          align-items: center;
-  background: url(assets/websiteBkgGridsmall.png) fixed; }
+          align-items: center; }
   div.intro p {
     width: 75%;
     text-align: center;
@@ -547,8 +546,7 @@ section.contact {
   -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
-  height: 100vh;
-  background: url(assets/websiteBkgGridsmall.png) fixed; }
+  height: 100vh; }
   section.contact .contactContainer {
     margin: auto; }
     section.contact .contactContainer .contactForm {
@@ -605,10 +603,364 @@ section.contact {
     text-decoration: none;
     border-bottom: 2px solid RGB(224, 79, 72); }
 
-html {
-  width: 100%; }
+/* Portrait tablet and small desktops */
+@media (max-width: 1000px) {
+  .sidebarFull h1.name {
+    font-size: 56px; }
+  .sidebarFull h3.tagline {
+    font-size: 36px; }
+  .introCont {
+    margin-top: 80px;
+    width: 100%; }
+  .sidebar {
+    padding: 15px; }
+  .sidebarShrink h1.name {
+    font-size: 44px; }
+  .sidebarShrink h3.tagline {
+    font-size: 30px; }
+  section.project {
+    padding: 20px 0; }
+    section.project .projectEach {
+      width: 600px; }
+    section.project .imageCaption {
+      width: 600px;
+      height: 200px; }
+    section.project .projectContainer {
+      width: 650px;
+      -webkit-flex-wrap: wrap;
+          -ms-flex-wrap: wrap;
+              flex-wrap: wrap; }
+      section.project .projectContainer .projectGallery {
+        padding: 0;
+        margin: 0; }
+        section.project .projectContainer .projectGallery .wp-post-image {
+          max-width: 600px;
+          max-height: 480px; }
+  .projectLink {
+    visibility: visible;
+    opacity: 1;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 18px;
+    z-index: 99;
+    background: RGB(224, 79, 72);
+    -webkit-transition: 0.3s all;
+            transition: 0.3s all;
+    padding: 25px;
+    font-size: 18px;
+    color: RGB(238, 241, 242);
+    text-decoration: none;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex; }
+    .projectLink p {
+      margin: auto;
+      margin-top: -7px; }
+  .projectEach img {
+    -webkit-filter: grayscale(50%); }
+  .projectEach:hover .projectLink {
+    visibility: visible;
+    opacity: 1;
+    height: 20px; }
+  section.contact {
+    width: 600px;
+    margin: 0 auto; }
+    section.contact p.contact {
+      width: 80%;
+      text-align: center;
+      margin: 10px auto;
+      line-height: 1.3; }
+    section.contact .contactContainer {
+      margin: auto; }
+      section.contact .contactContainer .contactForm {
+        width: 600px; }
+  .wpcf7 {
+    font-size: 16px; }
+    .wpcf7 form {
+      padding-left: 20px; }
+      .wpcf7 form textarea {
+        width: 550px; }
+      .wpcf7 form p {
+        display: inline-block;
+        width: 550px; }
+      .wpcf7 form span input {
+        width: 100%; }
+      .wpcf7 form input[type='submit'] {
+        width: 100%;
+        display: block; } }
+
+/* Smaller Screens fml */
+@media (max-width: 850px) {
+  section.project {
+    padding: 20px 0; }
+    section.project .projectEach {
+      width: 500px; }
+    section.project .imageCaption {
+      width: 500px;
+      height: 220px; }
+    section.project .projectContainer {
+      width: 550px;
+      -webkit-flex-wrap: wrap;
+          -ms-flex-wrap: wrap;
+              flex-wrap: wrap; }
+      section.project .projectContainer .projectGallery {
+        padding: 0;
+        margin: 0; }
+        section.project .projectContainer .projectGallery .wp-post-image {
+          max-width: 500px;
+          max-height: 333px; }
+  section.contact {
+    width: 500px;
+    margin: 0 auto; }
+    section.contact p.contact {
+      width: 80%;
+      text-align: center;
+      margin: 10px auto;
+      line-height: 1.3; }
+    section.contact .contactContainer {
+      margin: auto; }
+      section.contact .contactContainer .contactForm {
+        width: 500px; }
+  .wpcf7 {
+    font-size: 16px; }
+    .wpcf7 form {
+      padding-left: 20px; }
+      .wpcf7 form textarea {
+        width: 450px; }
+      .wpcf7 form p {
+        display: inline-block;
+        width: 450px; }
+      .wpcf7 form span input {
+        width: 100%; }
+      .wpcf7 form input[type='submit'] {
+        width: 100%;
+        display: block; } }
+
+/* Landscape phone to portrait tablet */
+@media (max-width: 768px) {
+  .sidebarFull h1.name {
+    font-size: 56px; }
+  .sidebarFull h3.tagline {
+    font-size: 36px; }
+  .contentShrink {
+    height: 100%; }
+    .contentShrink h4 {
+      font-size: 36px;
+      margin-top: 20px; }
+  .introCont {
+    margin-top: 80px;
+    width: 100%; }
+  .sidebar {
+    padding: 15px; }
+  .sidebarShrink h1.name {
+    font-size: 44px; }
+  .sidebarShrink h3.tagline {
+    font-size: 30px; }
+  section.project {
+    padding: 20px 0; }
+    section.project .projectEach {
+      width: 600px; }
+    section.project .imageCaption {
+      width: 600px;
+      height: 200px; }
+    section.project .projectContainer {
+      width: 650px;
+      -webkit-flex-wrap: wrap;
+          -ms-flex-wrap: wrap;
+              flex-wrap: wrap; }
+      section.project .projectContainer .projectGallery {
+        padding: 0;
+        margin: 0; }
+        section.project .projectContainer .projectGallery .wp-post-image {
+          max-width: 600px;
+          max-height: 480px; }
+  section.contact {
+    width: 600px;
+    margin: 0 auto; }
+    section.contact p.contact {
+      width: 80%;
+      text-align: center;
+      margin: 10px auto;
+      line-height: 1.3; }
+    section.contact .contactContainer {
+      margin: auto; }
+      section.contact .contactContainer .contactForm {
+        width: 600px; }
+  .wpcf7 {
+    font-size: 16px; }
+    .wpcf7 form {
+      padding-left: 20px; }
+      .wpcf7 form textarea {
+        width: 550px; }
+      .wpcf7 form p {
+        display: inline-block;
+        width: 550px; }
+      .wpcf7 form span input {
+        width: 100%; }
+      .wpcf7 form input[type='submit'] {
+        width: 100%;
+        display: block; } }
+
+/* Landscape phones and down */
+@media (max-width: 500px) {
+  .sidebarFull {
+    width: 100%;
+    height: 30vh;
+    position: fixed;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    padding: 10px; }
+    .sidebarFull h1.name {
+      font-size: 35px;
+      margin-top: 0; }
+    .sidebarFull h3.tagline {
+      font-size: 24px; }
+    .sidebarFull ul.nav {
+      font-size: 16px;
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: row;
+          -ms-flex-direction: row;
+              flex-direction: row;
+      margin: 0 auto;
+      margin-bottom: -10px; }
+      .sidebarFull ul.nav li a {
+        padding: 10px;
+        margin: 0 10px; }
+      .sidebarFull ul.nav li:last-child {
+        display: none; }
+    .sidebarFull ul.social {
+      margin-bottom: 5px; }
+      .sidebarFull ul.social p {
+        display: none; }
+  aside.first {
+    padding: 0; }
+  .contentShrink {
+    width: 100%; }
+  .introCont {
+    margin-top: 25vh;
+    width: 100%; }
+  .sidebar {
+    padding: 15px; }
+  .sidebarShrink {
+    position: fixed;
+    height: 10vh;
+    width: 100%;
+    padding: 0;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
+    .sidebarShrink .nameTitle {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: row;
+          -ms-flex-direction: row;
+              flex-direction: row;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center; }
+    .sidebarShrink h1.name {
+      font-size: 20px; }
+    .sidebarShrink h3.tagline {
+      font-size: 20px;
+      padding: 0; }
+    .sidebarShrink img.header {
+      display: none; }
+    .sidebarShrink ul.nav {
+      font-size: 16px;
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: row;
+          -ms-flex-direction: row;
+              flex-direction: row;
+      margin: 0 auto;
+      margin-bottom: -10px; }
+      .sidebarShrink ul.nav li a {
+        padding: 10px;
+        margin: 0 10px; }
+      .sidebarShrink ul.nav li:last-child {
+        display: none; }
+    .sidebarShrink ul.social {
+      display: none; }
+  .contentFull {
+    width: 100%; }
+  section.project {
+    padding: 100px 0; }
+    section.project .projectEach {
+      width: 400px; }
+    section.project .imageCaption {
+      width: 400px;
+      height: 250px; }
+    section.project .projectContainer {
+      width: 450px;
+      -webkit-flex-wrap: wrap;
+          -ms-flex-wrap: wrap;
+              flex-wrap: wrap; }
+      section.project .projectContainer .projectGallery {
+        padding: 0;
+        margin: 0; }
+        section.project .projectContainer .projectGallery .wp-post-image {
+          max-width: 400px;
+          max-height: 300px; }
+  section.project.design {
+    padding: 10px;
+    margin-top: -50px; }
+  section.contact {
+    width: 450px;
+    margin: 0 auto; }
+    section.contact p.contact {
+      width: 80%;
+      text-align: center;
+      margin: 10px auto;
+      line-height: 1.3; }
+    section.contact .contactContainer {
+      margin: auto; }
+      section.contact .contactContainer .contactForm {
+        width: 450px; }
+  .wpcf7 {
+    font-size: 16px; }
+    .wpcf7 form {
+      padding-left: 20px; }
+      .wpcf7 form textarea {
+        width: 410px; }
+      .wpcf7 form p {
+        display: inline-block;
+        width: 410px; }
+      .wpcf7 form span input {
+        width: 100%; }
+      .wpcf7 form input[type='submit'] {
+        width: 100%;
+        display: block; }
+  footer {
+    display: block; }
+    footer .container {
+      background: RGB(224, 79, 72);
+      text-align: center;
+      color: RGB(238, 241, 242);
+      width: 100%;
+      height: 100px; } }
 
 body {
+  background: url(assets/websiteBkgGridsmall.png) fixed;
   width: 100%;
   margin: 0;
   padding: 0; }
@@ -616,3 +968,6 @@ body {
     background: RGB(224, 79, 72); }
   body ::selection {
     background: RGB(224, 79, 72); }
+
+footer {
+  display: none; }
