--- a/styles/_responsive.scss
+++ b/styles/_responsive.scss
@@ -1,1 +1,517 @@
-_responsive.scss
+/* Portrait tablet and small desktops */
+@media (max-width: 1000px) {
+
+// .HEADER
+		.sidebarFull {
+			// width: 40%;
+			h1.name {
+				font-size: 56px;
+			}
+			h3.tagline {
+				font-size: 36px;
+			}
+		}
+
+		.contentShrink {
+			// width: 60%;
+		}
+		.introCont{
+			margin-top: 80px;
+			width: 100%;
+		}
+// .SIDEBAR
+		.sidebar {
+			padding: 15px;
+		}
+		.sidebarShrink {
+			// width: 23%;
+			h1.name {
+				font-size: 44px;
+			}
+			h3.tagline {
+				font-size: 30px;
+			}
+
+		}
+		.contentFull {
+			// width: 75%;
+		}
+// .PROJECTS 
+		section.project {
+			padding: 20px 0;
+			.projectEach {
+				width: 600px;
+			}
+			.imageCaption {
+				width: 600px;
+				height: 200px;
+			}
+			.projectContainer {
+				width: 650px;
+				flex-wrap: wrap;
+				.projectGallery {
+					padding: 0;
+					margin: 0;
+					.wp-post-image {
+						max-width: 600px;
+						max-height: 480px;
+					}
+				}
+			}
+		}
+		.projectLink {
+			visibility: visible;
+			// display: none;
+			opacity: 1;
+			position: absolute;
+			left: 0;
+			bottom: 0;
+			// width:100%; 
+			height:18px;
+			z-index: 99;
+			background: $red;
+			transition: 0.3s all;
+			padding: 25px;
+			font-size: 18px;
+			color: $white;
+			text-decoration: none;
+			display: flex;
+			p {
+				margin: auto;
+				margin-top: -7px;
+				// border-bottom: 2px solid $white;
+			}
+		}
+		.projectEach {
+			img {
+			-webkit-filter: grayscale(50%);
+
+			}
+		}
+		.projectEach:hover {
+			.projectLink {
+				visibility: visible;
+				opacity: 1;
+				height: 20px;
+			}
+		}
+// .CONTACT
+		section.contact {
+			// width: 100%;
+			width: 600px;
+			margin: 0 auto;
+			p.contact {
+				width: 80%;
+				text-align: center;
+				margin: 10px auto;
+				line-height: 1.3;
+
+			}
+			.contactContainer {
+				margin: auto;
+				.contactForm {
+				width: 600px;
+				}
+			}
+		}
+		.wpcf7 {
+			font-size: 16px;
+			// letter-spacing: 2px;
+			form {
+				padding-left: 20px;
+				// padding: 10px;
+				textarea {
+					width: 550px;
+				}
+				p {
+					display: inline-block;
+					width: 550px;
+				}
+				span {
+					input {
+					width: 100%;
+					}
+				}
+				input[type='submit']{
+					width: 100%;
+					display: block;
+				}
+			}
+
+		}
+
+}
+
+/* Smaller Screens fml */
+@media (max-width: 850px) {
+// .PROJECTS
+		section.project {
+				padding: 20px 0;
+				.projectEach {
+					width: 500px;
+				}
+				.imageCaption {
+					width: 500px;
+					height: 220px;
+				}
+				.projectContainer {
+					width: 550px;
+					flex-wrap: wrap;
+					.projectGallery {
+						padding: 0;
+						margin: 0;
+						.wp-post-image {
+							max-width: 500px;
+							max-height: 333px;
+						}
+					}
+				}
+			}
+// .CONTACT
+		section.contact {
+			// width: 100%;
+			width: 500px;
+			margin: 0 auto;
+			p.contact {
+				width: 80%;
+				text-align: center;
+				margin: 10px auto;
+				line-height: 1.3;
+
+			}
+			.contactContainer {
+				margin: auto;
+				.contactForm {
+				width: 500px;
+				}
+			}
+		}
+		.wpcf7 {
+			font-size: 16px;
+			// letter-spacing: 2px;
+			form {
+				padding-left: 20px;
+				// padding: 10px;
+				textarea {
+					width: 450px;
+				}
+				p {
+					display: inline-block;
+					width: 450px;
+				}
+				span {
+					input {
+					width: 100%;
+					}
+				}
+				input[type='submit']{
+					width: 100%;
+					display: block;
+				}
+			}
+
+		}
+	
+}
+
+/* Landscape phone to portrait tablet */
+@media (max-width: 768px) {
+
+// .HEADER
+		.sidebarFull {
+			// width: 40%;
+			h1.name {
+				font-size: 56px;
+			}
+			h3.tagline {
+				font-size: 36px;
+			}
+		}
+
+		.contentShrink {
+			// width: 60%;
+			height: 100%;
+			h4 {
+				font-size: 36px;
+				margin-top: 20px;
+			}
+		}
+		.introCont{
+			margin-top: 80px;
+			width: 100%;
+		}
+// .SIDEBAR
+		.sidebar {
+			padding: 15px;
+		}
+		.sidebarShrink {
+			// width: 23%;
+			h1.name {
+				font-size: 44px;
+			}
+			h3.tagline {
+				font-size: 30px;
+			}
+
+		}
+		.contentFull {
+			// width: 75%;
+		}
+// .PROJECTS 
+		section.project {
+			padding: 20px 0;
+			.projectEach {
+				width: 600px;
+			}
+			.imageCaption {
+				width: 600px;
+				height: 200px;
+			}
+			.projectContainer {
+				width: 650px;
+				flex-wrap: wrap;
+				.projectGallery {
+					padding: 0;
+					margin: 0;
+					.wp-post-image {
+						max-width: 600px;
+						max-height: 480px;
+					}
+				}
+			}
+		}
+		
+// .CONTACT
+		section.contact {
+			// width: 100%;
+			width: 600px;
+			margin: 0 auto;
+			p.contact {
+				width: 80%;
+				text-align: center;
+				margin: 10px auto;
+				line-height: 1.3;
+
+			}
+			.contactContainer {
+				margin: auto;
+				.contactForm {
+				width: 600px;
+				}
+			}
+		}
+		.wpcf7 {
+			font-size: 16px;
+			// letter-spacing: 2px;
+			form {
+				padding-left: 20px;
+				// padding: 10px;
+				textarea {
+					width: 550px;
+				}
+				p {
+					display: inline-block;
+					width: 550px;
+				}
+				span {
+					input {
+					width: 100%;
+					}
+				}
+				input[type='submit']{
+					width: 100%;
+					display: block;
+				}
+			}
+
+		}
+
+	
+}
+
+/* Landscape phones and down */
+@media (max-width: 500px) {
+// .HEADER
+		.sidebarFull {
+			// display: none;
+			width: 100%;
+			height: 30vh;
+			position: fixed;
+			justify-content: space-between;
+			padding: 10px;
+			h1.name {
+				font-size: 35px;
+				margin-top: 0;
+			}
+			h3.tagline {
+				font-size: 24px;
+			}
+			ul.nav {
+				font-size: 16px;
+				flex-direction: row;
+				margin: 0 auto;
+				margin-bottom: -10px;
+
+				li a {
+					padding: 10px;
+					margin: 0 10px;
+				}
+				li:last-child {
+					display: none;
+				}
+
+			}
+			ul.social {
+				margin-bottom: 5px;
+				p {
+					display: none;
+				}
+			}
+		}
+
+		aside.first {
+			padding: 0;
+		}
+
+		.contentShrink {
+			width: 100%;
+
+		}
+		.introCont{
+			margin-top: 25vh;
+			width: 100%;
+		}
+// .SIDEBAR
+		.sidebar {
+			padding: 15px;
+		}
+		.sidebarShrink {
+			// display: none;
+			position: fixed;
+			height: 10vh;
+			width: 100%;
+			padding: 0;
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+			.nameTitle {
+				display: flex;
+				flex-direction: row;
+				justify-content: center;
+			}
+			h1.name {
+				font-size: 20px;
+				// display: none;
+			}
+			h3.tagline {
+				font-size: 20px;
+				// display: none;
+				padding: 0;
+			}
+			img.header {
+				display: none;
+			}
+			ul.nav {
+				font-size: 16px;
+				flex-direction: row;
+				margin: 0 auto;
+				margin-bottom: -10px;
+
+				li a {
+					padding: 10px;
+					margin: 0 10px;
+				}
+				li:last-child {
+					display: none;
+				}
+
+			}
+			ul.social {
+				display: none;
+			}
+		}
+		.contentFull {
+			width: 100%;
+		}
+// .PROJECTS 
+		section.project {
+			padding: 100px 0;
+			.projectEach {
+				width: 400px;
+			}
+			.imageCaption {
+				width: 400px;
+				height: 250px;
+			}
+			.projectContainer {
+				width: 450px;
+				flex-wrap: wrap;
+				.projectGallery {
+					padding: 0;
+					margin: 0;
+					.wp-post-image {
+						max-width: 400px;
+						max-height: 300px;
+					}
+				}
+			}
+		}
+		section.project.design {
+			padding: 10px;
+			margin-top: -50px;
+		}
+// .CONTACT
+		section.contact {
+			// width: 100%;
+			width: 450px;
+			margin: 0 auto;
+			p.contact {
+				width: 80%;
+				text-align: center;
+				margin: 10px auto;
+				line-height: 1.3;
+
+			}
+			.contactContainer {
+				margin: auto;
+				.contactForm {
+				width: 450px;
+				}
+			}
+		}
+		.wpcf7 {
+			font-size: 16px;
+			// letter-spacing: 2px;
+			form {
+				padding-left: 20px;
+				// padding: 10px;
+				textarea {
+					width: 410px;
+				}
+				p {
+					display: inline-block;
+					width: 410px;
+				}
+				span {
+					input {
+					width: 100%;
+					}
+				}
+				input[type='submit']{
+					width: 100%;
+					display: block;
+				}
+			}
+
+		}
+		footer {
+			display: block;
+			.container {
+				background: $red;
+				text-align: center;
+				color: $white;
+				width: 100%;
+				height: 100px;
+			}
+	}
+}
