--- a/styles/style.scss
+++ b/styles/style.scss
@@ -28,10 +28,13 @@ $whiteOverlay: RGBA(255,255,255,1);
 @import 'projects';
 @import 'contact';
 
+@import 'responsive';
+
 html {
-	width: 100%;
+	// width: 100%;
 }
 body {
+	background: url(assets/websiteBkgGridsmall.png) fixed;
 	width: 100%;
 	margin: 0;
 	padding: 0;
@@ -39,4 +42,8 @@ body {
 	  background: $red;
 	}
 
+}
+
+footer {
+	display: none;
 }
